IRSA-2211: fix layout issue in Firefox

--- a/src/firefly/html/css/global.css
+++ b/src/firefly/html/css/global.css
@@ -467,5 +467,5 @@
 .flex-full {
     display: flex;
     flex-direction: column;
-    flex-grow: 1
+    flex-grow: 1;
 }
